--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "debug": "NODE_OPTIONS='--openssl-legacy-provider' next dev -p 5000"
